--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "^9.0.0-next.2",
     "@angular/common": "^9.0.0-next.2",
     "@angular/compiler": "^9.0.0-next.2",
-    "@angular/core": "^9.0.0-next.2",
+    "@angular/core": "^8.2.2",
     "@angular/forms": "^9.0.0-next.2",
     "@angular/platform-browser": "^9.0.0-next.2",
     "@angular/platform-browser-dynamic": "^9.0.0-next.2",
@@ -23,12 +23,12 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.6.1",
     "jquery": "^3.3.1",
-    "ngx-lightbox": "^1.2.0",
+    "ngx-lightbox": "^2.0.2",
     "popper.js": "^1.14.6",
     "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
