--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-next.2",
-    "@angular/common": "^9.0.0-next.2",
-    "@angular/compiler": "^9.0.0-next.2",
+    "@angular/animations": "^8.2.2",
+    "@angular/common": "^8.2.2",
+    "@angular/compiler": "^8.2.2",
     "@angular/core": "^8.2.2",
-    "@angular/forms": "^9.0.0-next.2",
-    "@angular/platform-browser": "^9.0.0-next.2",
-    "@angular/platform-browser-dynamic": "^9.0.0-next.2",
-    "@angular/router": "^9.0.0-next.2",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@angular/forms": "^8.2.2",
+    "@angular/platform-browser": "^8.2.2",
+    "@angular/platform-browser-dynamic": "^8.2.2",
+    "@angular/router": "^8.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.2.1",
     "core-js": "^2.6.1",
     "jquery": "^3.3.1",
@@ -33,8 +33,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
     "@angular/cli": "^8.2.2",
-    "@angular/compiler-cli": "^9.0.0-next.2",
-    "@angular/language-service": "^9.0.0-next.2",
+    "@angular/compiler-cli": "^8.2.2",
+    "@angular/language-service": "^8.2.2",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.2",
