updated scss and package lock

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             ],
             "styles": [
               "node_modules/ngx-lightbox/lightbox.css",
-              "src/styles.scss"
+              "src/scss/global.scss"
             ],
             "scripts": []
           },
