--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^2.6.1",
     "ngx-lightbox": "^2.0.2",
     "rxjs": "^6.5.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
