--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# upload script
-upload.sh
+# deploy script
+deploy.sh
 
 # assets
 /src/assets
