--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ng serve",
-    "build": "ng build --prod --aot --buildOptimizer",
+    "build": "ng build --prod --buildOptimizer --deleteOutputPath",
+    "deploy": "npm run build && gzip-all \"dist/*.{css,js,html}\" && ./deploy.sh jaredgkraemer.com",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -37,6 +38,7 @@
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "gzip-all": "^1.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
