update dependencies and added invalidate script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build --prod --buildOptimizer --deleteOutputPath",
     "deploy": "npm run build && gzip-all \"dist/*.{css,js,html}\" && bash ./deploy.sh jaredgkraemer.com",
+    "invalidate": "cat aws_secrets.json | json CLOUDFRONT_ID | xargs ./invalidate.sh",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -41,12 +42,13 @@
     "gzip-all": "^1.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "json": "^9.0.6",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.2",
+    "protractor": "^7.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~3.7.5"
